[tool.poetry]
name = "moneyforward-paid-service"
version = "0.1.0"
description = ""
authors = ["hikaelis <sileakih@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.24.0"
python-dotenv = "^1.0.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
